gcp.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ursa-api
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: ursa-api
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ursa-api
spec:
  selector:
    matchLabels:
      app: ursa-api
  replicas: 1
  template:
    metadata:
      labels:
        app: ursa-api
    spec:
      containers:
        - name: ursa-api
          image: gcr.io/ursa-app/ursa/ursa-server:0.0.6
          ports:
            - containerPort: 8080
