gcp.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ursa-api-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
      - api.ursa.cc
    secretName: api-ursa-le-prod
  rules:
    - host: api.ursa.cc
      http:
        paths:
          - backend:
              serviceName: ursa-api
              servicePort: 8080
